Fixed a stupid bug in the downsampling code (not sure it's still the best way to go about it). Added a CSS fix to ensure that it's not too wide on desktop computer screens.

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,9 +1,22 @@
+@media screen,tv {
 body {
     font-family: Arial;
     color: white;
     background-color: black;
     padding: 1px;
     margin: 1px;
+    max-width: 500px;
+}
+}
+
+@media handheld {
+body {
+    font-family: Arial;
+    color: white;
+    background-color: black;
+    padding: 1px;
+    margin: 1px;
+}
 }
 
 h1 {
@@ -71,3 +84,4 @@ h1 {
     position: absolute;
     bottom: 5px;
 }
+
